syntax = "proto3";

package moviedb_service;

option go_package = "github.com/kartik7120/booking_payment_service/cmd/grpcServer;payment_service";

import "google/protobuf/timestamp.proto";

enum Currency {
    INR = 0; // Indian Rupee
    USD = 1; // US Dollar
    EUR = 2; // Euro
    GBP = 3; // British Pound
    JPY = 4; // Japanese Yen
    AUD = 5; // Australian Dollar
    CAD = 6; // Canadian Dollar
    CNY = 7; // Chinese Yuan
    CHF = 8; // Swiss Franc
    SEK = 9; // Swedish Krona
    NZD = 10; // New Zealand Dollar
    RUB = 11; // Russian Ruble
    ZAR = 12; // South African Rand
    KRW = 13; // South Korean Won
    SGD = 14; // Singapore Dollar
    HKD = 15; // Hong Kong Dollar
    AED = 16; // United Arab Emirates Dirham
    BRL = 17; // Brazilian Real
    MXN = 18; // Mexican Peso
    TRY = 19; // Turkish Lira
    IDR = 20; // Indonesian Rupiah
    MYR = 21; // Malaysian Ringgit
}

enum PaymentStatus {
    PAYMENT_STATUS_UNSPECIFIED = 0;
    PAYMENT_STATUS_SUCCESS = 1;
    PAYMENT_STATUS_FAILED = 2;
}

enum PaymentType {
    TICKET_BOOKING = 0;
    MEALS = 1;
}

message CheckoutSessionLineItemParam {
    int32 price = 1;
    int32 quantity = 2;
    PaymentType paymentType = 3;
    string success_url = 4;
    string cancel_url = 5;
}

message PaymentIntent {
  string id = 1;
  int64 amount = 2;
  string currency = 3;
  string status = 4;
  string client_secret = 5;
  repeated string payment_method_types = 6;
  google.protobuf.Timestamp created = 7;
}

message CreateCheckoutSessionRequest {
    int32 movieID = 1;
    repeated CheckoutSessionLineItemParam payment_items = 2;
}

message CreateCheckoutSessionResponse {
    int32 status = 1;
    string error = 2;
    string message = 3;
}

message Create_Payment_Intent_INR_Request {
    int32 quintity = 1;
    reserved 2;
    string success_url = 3;
    Currency currency = 4;
    int32 price = 5;
    string phone_number = 6;
    string email = 7;
    string name = 8;
    string cancel_url = 9;
    string country = 10;
    string state = 11;
    string city = 12;
    int32 zipcode = 13;
    string street = 14;
    string movieName = 15;
    string movieID = 16;
}

message Create_Payment_Intent_INR_Response {
    int32 status = 1;
    string error = 2;
    string message = 3;
    reserved 4;
    reserved 5;
    string payment_link = 6;
}

service PaymentService {
    rpc CreateCheckOutSession(CreateCheckoutSessionRequest) returns (CreateCheckoutSessionResponse);
    rpc CreatePaymentLink(Create_Payment_Intent_INR_Request) returns (Create_Payment_Intent_INR_Response);
}